# UGV

./: .gitignore  README.md  Servo_Motor.py  UGVWiring_REVA.vsdx  UGV_GUI.py  arduinoTest.ino
ArdPWM/MotorControlCode/: MotorControlCode.ino
Follow_Vehicle/: .gitignore  README.md
Follow_Vehicle/I2C_Code/Jetson/: CMakeLists.txt  I2C-config.txt  I2C.cpp  I2C.hpp  I2CMain.cpp
Follow_Vehicle/PWMCode/Jetson/: .control.txt.swp  CMakeLists.txt  PWM-config.txt  PWM.cpp  PWM.hpp  PWMMain.cpp  control.txt  sshControl.cpp
Follow_Vehicle/RemoteGUI/: UGV_GUI.py
Follow_Vehicle/TerminalRC/: CMakeLists.txt  sshControl.cpp
Follow_Vehicle/Ultrasonics/Distance/: CMakeLists.txt  Makefile  distance.cpp  distance.h  distance.hpp  hcsr04.cpp  hcsr04.hpp  jetsonGPIO.cpp  jetsonGPIO.hpp  moving_average.cpp  moving_average.h  simpleHCSR04  testDistance.cpp
Follow_Vehicle/Ultrasonics/example/: simpleHCSR04
Follow_Vehicle/Ultrasonics/src/: hcsr04.h
Follow_Vehicle/ZedCam/: CMakeLists.txt  ZedConfig.cpp  ZedConfig.hpp  ZedMain.cpp  Zedconfig.cpp
Follow_Vehicle/remotePWM/: CMakeLists.txt  control.txt  main.cpp  remote.cpp  remote.hpp
HEVT_GUI/: Servo_Motor.py  UGV_GUI.py
Lead_Vehicle/: README.md
PWMCode/Jetson/: CMakeLists.txt  I2C-config.txt  I2C.cpp  I2C.hpp  I2CMain.cpp  I2CPWM.cpp  I2CPWM.hpp  PWMMain.cpp
PWMCode/sketch_nov12a/: sketch_nov12a.ino
Ultrasonics/: usablePorts.txt
Ultrasonics/example/: moving_average.cpp  moving_average.h  simpleHCSR04.cpp
Ultrasonics/src/: hcsr04.cpp  hcsr04.h  jetsonGPIO.h
j2ard/: jetsonArd  jetsonArd.c
(+7 files in other folders)
